2007-10-25  Gary Thomas  <gary@mlbassoc.com>

	* common/eCosTest.h: Remove class qualifier - no longer legal
	in GCC-4.x

2006-09-06  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestUtils.cpp, common/eCosTestUtils.h,
	  common/eCosTest.h: Further tweaks to function prototypes for
	recent GCC.

2006-07-10  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestUtils.cpp, common/eCosTestUtils.h: Tweak function
	prototypes for GCC 3.4.4.

2003-04-11  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp (CeCosTestPlatform::Load): Return
	true since it's not a problem if there are no platforms defined.

	* unix/Makefile: Allow ser_filter to build under Cygwin.

2003-02-21  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp (CeCosTestPlatform::Load): Allow an
	extra character for string termination when retrieving registry
	key names.

2003-02-13  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp:
	Look for all persistent application settings under
        "HKEY_CURRENT_USER\Software\eCos Configuration Tool\"
	for consistency.

2003-02-05  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTest.cpp (CygPath): Get the cygdrive prefix from
	the registry.

2003-01-20  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp (CProperties::CreateKey):
	"sizeof TCHAR" -> "sizeof (TCHAR)" for GNU headers.

2001-02-20  Jonathan Larmour  <jlarmour@redhat.com>

	* common/eCosTestClient.cpp (LocateExecutables): Add /sbin and
	/usr/sbin to path before trying to run fuser.

2000-09-28  Jesper Skov  <jskov@redhat.com>

	* common/eCosTestSerialFilter.cpp (CMD_TestBinary): Reset counter
	for each test so the failure data is the same from two different
	runs of the test.

2000-09-15  Jesper Skov  <jskov@redhat.com>

	* common/ser_filter.cpp (main): Don't require ResourceServer.

	* common/Makefile.am: Added ser_filter handling.
	* common/Makefile.in: Ditto.
	* common/configure: Ditto.